--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,7 +12,6 @@
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
 
-
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Novan Elegance" />
     <meta name="twitter:description" content="Novan Elegance - Premium E-commerce Store" />
@@ -22,5 +21,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
